--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  Researcher and entrepreneur (prior company public listed). MIT PhD. Founder of <a href="https://agiopen.org">OpenAGI Labs</a>, building world-class <a href="https://agiopen.org">Computer Use models</a> and its open ecosystem. We recently released the <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">state-of-the-art computer use model, Lux,</a> which outperforms existing models from frontier labs like Google, OpenAI, Anthropic on the Online Mind2Web benchmark, and running 2-3 times faster. We saw rapid adoption of the model after our release.
+  MIT PhD. Researcher and entrepreneur (prior company public listed).
 </font></p>
 <p><font face="Verdana">
-  I am also the primary author of several widely adopted audio models. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  I founded <a href="https://agiopen.org">OpenAGI Labs</a>, building world-class <a href="https://agiopen.org">Computer Use models</a> and its open ecosystem. We recently released the <a href="https://agiopen.org/blog">state-of-the-art computer use model, Lux,</a> which outperforms current frontier models and runs much more efficient.
+</font></p>
+<p><font face="Verdana">
+  I am also the primary author of several widely adopted <hl>Audio Foundation Models</hl>. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
   Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
@@ -124,11 +127,10 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Dec 2025] We recently released the <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">state-of-the-art computer use model, Lux,</a> which outperforms existing models from frontier labs like Google, OpenAI, Anthropic on the Online Mind2Web benchmark, and running 2-3 times faster. It can run a computer the way a person would, seeing the screen and taking actions across real desktop and web workflows. 
+      [Dec 2025] We recently released the <a href="https://agiopen.org/blog">state-of-the-art computer use model, Lux,</a> which outperforms current models from frontier labs and runs much more efficient. It can run a computer the way a person would, seeing the screen and taking actions across real desktop and web workflows. 
       <ul>
-        <a href="https://agiopen.org/blog">Blog</a> <br>
-        <a href="https://x.com/agiopen_org/status/1995538447579447368?s=20">X post</a> <br>
-        <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">VentureBeat Report</a> <br> 
+        <a href="https://x.com/agiopen_org/status/1995538447579447368?s=20">X post (395K views)</a> <br>
+        <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">VentureBeat Report</a> 
       </ul>
     </li>
     <li>
@@ -162,22 +164,38 @@ li {
 </div>
 
 <div class="section">
-  <h3 id="genai"><font face="Verdana">Projects in Generative Models</h3>
+  <h3 id="publications"><font face="Verdana">Projects and Publications</h3>
   <table width="100%">
 
-  <!-- JetMoE -->
+  <!-- Lux -->
   <tr>
-    <td width="25%" valign="middle"><p><img src="figures/jetmoe.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
-    <td width="75%" valign="top">
+    <td width="25%" valign="middle"><p><img src="figures/lux.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
     <p class="padding"><font face="Verdana">
-    <b><a id="openvoice">JetMoE: Reaching LLaMA2 Performance with 0.1M Dollars</a></b><br>
-    Yikang Shen, Zhen Guo, Tianle Cai and <b>Zengyi Qin</b><br>
-    <i>Technical Report, 2024</i><br>
+    <b><a id="lux">Introducing Lux, the State-of-the-Art Computer-Use Model</a></b><br>
+    OpenAGI Labs, 2025<br>
     </p>
-    <p class="padding"><font face="Verdana"> JetMoE is pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training with remarkable cost-efficiency. <br>
-    <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
+    <p class="padding"><font face="Verdana">
+    Lux can operate the computer like a human, seeing the screen and taking actions across real desktop and web workflows. It outperforms current frontier models while being much more efficient. <br>
+    <a href="https://agiopen.org/blog">blog</a> | <a href="https://x.com/agiopen_org/status/1995538447579447368?s=20">X post (395K views)</a> | <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">VentureBeat Report</a> <br>
     </p>
-    </td>
+  </p></td>
+  </tr>
+
+  <!-- Lux -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/osgym.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
+    <p class="padding"><font face="Verdana">
+    <b><a id="osgym">OSGym: Super-Scalable Data Engine for Generalizable Computer Use Agents</a></b><br>
+    <b>Zengyi Qin</b>, Jinyuan Chen, Yunze Man, Shengcao Cao, Ziqi Pang, Zhuoyuan Wang, ..., Haoran Geng, Yutong Ban,  Jitendra Malik, Pieter Abbeel<br>
+    <i>Technical Report, 2025</i><br>  
+    </p>
+    <p class="padding"><font face="Verdana">
+    OSGym parallelizes thousands of OS replicas at academic cost, enabling large-scale data generation, customization, and end-to-end pipelines for RL across diverse real-world tasks to train computer use agents. <br>
+    <a href="https://arxiv.org/pdf/2511.11672">paper</a> | <a href="https://github.com/agiopen-org/osgym">source code</a> <br>
+    </p>
+  </p></td>
   </tr>
 
   <!-- OpenVoice -->
@@ -215,7 +233,22 @@ li {
     </p></td>
   </tr>
 
-    <!-- Interspeech -->
+  <!-- JetMoE -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/jetmoe.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="top">
+    <p class="padding"><font face="Verdana">
+    <b><a id="openvoice">JetMoE: Reaching LLaMA2 Performance with 0.1M Dollars</a></b><br>
+    Yikang Shen, Zhen Guo, Tianle Cai and <b>Zengyi Qin</b><br>
+    <i>Technical Report, 2024</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> JetMoE is pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training with remarkable cost-efficiency. <br>
+    <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
+    </p>
+    </td>
+  </tr>
+
+  <!-- Interspeech -->
   <tr>
     <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
     <td width="75%" valign="middle">
@@ -234,7 +267,6 @@ li {
 
 
 <div class="section">
-  <h3 id="publications"><font face="Verdana">Projects in 3D Computer Vision</h3>
   <table width="100%">
 
   <!-- MONOGRNET-TPAMI -->
@@ -305,7 +337,6 @@ li {
 </div> 
 
   <div class="section">
-  <h3 id="publications"><font face="Verdana">Projects in Reinforcement Learning and Robotics</h3>
   <table width="100%">
 
   <!-- Sablas -->
@@ -425,7 +456,6 @@ li {
 </div> 
   
   <div class="section">
-    <h3 id="publications"><font face="Verdana">Projects in AI for Healthcare</h3>
     <table width="100%">
   
   <!-- PDoctor -->
