--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ li {
   MIT PhD. Researcher and entrepreneur (prior company public listed).
 </font></p>
 <p><font face="Verdana">
-  I founded <a href="https://agiopen.org">OpenAGI Labs</a>, building world-class <a href="https://agiopen.org">Computer Use models</a> and its open ecosystem. We recently released the <a href="https://agiopen.org/blog">state-of-the-art computer use model, Lux,</a> which outperforms current frontier models and runs much more efficient.
+  I founded <a href="https://agiopen.org">OpenAGI Labs</a>, building state-of-the-art <a href="https://agiopen.org">Computer Use models</a> and its open ecosystem. We recently released the <a href="https://agiopen.org/blog">state-of-the-art computer use model, Lux,</a> which outperforms current frontier models and runs much more efficient.
 </font></p>
 <p><font face="Verdana">
   I am also the primary author of several widely adopted <hl>Audio Foundation Models</hl>. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
